--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "author": "Ensemble Commerce",
   "license": "MIT",
   "dependencies": {
+    "@hayes0724/shopify-packer": "^1.3.2",
+    "aos": "^2.3.4",
     "bootstrap": "^4.5.3"
   },
   "devDependencies": {
@@ -35,6 +37,7 @@
     "@babel/plugin-transform-async-to-generator": "^7.10.4",
     "@babel/plugin-transform-runtime": "^7.10.5",
     "@namics/stylelint-bem": "^6.3.1",
+    "@popperjs/core": "^2.6.0",
     "@shopify/babel-preset": "^23.1.0",
     "cssnano": "^4.1.10",
     "cssnano-preset-advanced": "^4.0.7",
